[package]
name = "bootcamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-modules= "0.8.0"
draw= { path = "../rust_stuff/draw" }
serde = {"version"="1.0.178", "features"=["derive"]}
rand = "0.8.4"
