[package]
name = "bootcamp"
version = "0.1.0"
edition = "2021"
default-run = "bootcamp"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
draw= { path = "../rust_stuff/draw" }
serde = {"version"="1.0.178", "features"=["derive"]}
rand = "0.8.4"
anyerror = "0.1.9"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
anyhow = "1.0"
error-stack = "0.4.1"
tokio = {version = "1.32.0", features = ["full"]}
tokio-stream = "0.1.14"
lazy_static = "1.5.0"
